@@ -1,6 +1,9 @@
 Changes since version 1.1.1
 ---------------------------
 
+- Fixed ant tasks to use ICE_HOME (if defined) in the pathname of
+  a translator executable.
+
 - Removed ice_flush() on the proxy base class. Batch requests are
   now flushed by calling Communicator::flushBatchRequests(). This
   flushes all requests that are currently batched in the communicator,
